# driftmind-benchmark

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
benchmark/: LSTM.py  M_ARIMA.py  RR_ARIMA.py  R_ARIMA.py  S_ARIMA.py  benchmark.ipynb  benchmark_old.ipynb  t_arima.ipynb
benchmark/data/driftmind_results/: analysis_results.csv
benchmark/data/driftmind_results/experiments/: Experiment_0_accessnetwork_TCP_TCP_frame_length_Report.csv  Experiment_100_hyperwave-isp_TCP_TCP_frame_length_Report.csv  Experiment_101_hyperwave-isp_TCP_TCP_tcp_window_size_Report.csv  Experiment_102_influxdb-rpc_TCP_TCP_frame_length_Report.csv  Experiment_103_influxdb-rpc_TCP_TCP_tcp_window_size_Report.csv  Experiment_104_infobright_TCP_TCP_frame_length_Report.csv  Experiment_105_irdmi_TCP_TCP_frame_length_Report.csv  Experiment_106_irdmi_TCP_TCP_tcp_window_size_Report.csv  Experiment_107_irtrans_TCP_TCP_frame_length_Report.csv  Experiment_108_irtrans_TCP_TCP_ip_ttl_Report.csv  Experiment_109_irtrans_TCP_TCP_tcp_window_size_Report.csv  Experiment_10_boinc-client_TCP_TCP_tcp_window_size_Report.csv  Experiment_110_isoipsigport-_TCP_TCP_frame_length_Report.csv  Experiment_111_isoipsigport-_TCP_TCP_tcp_window_size_Report.csv  Experiment_112_issd_TCP_TCP_frame_length_Report.csv  Experiment_113_italk_TCP_TCP_frame_length_Report.csv  Experiment_114_jstel_TCP_TCP_frame_length_Report.csv  Experiment_115_jstel_TCP_TCP_tcp_window_size_Report.csv  Experiment_116_kerberos_TCP_TCP_frame_length_Report.csv  Experiment_117_kerberos_TCP_TCP_ip_ttl_Report.csv  Experiment_118_kerberos_TCP_TCP_tcp_window_size_Report.csv  Experiment_119_kyoceranetdev_TCP_TCP_frame_length_Report.csv  Experiment_11_cadkey-tablet_TCP_TCP_frame_length_Report.csv  Experiment_120_kyoceranetdev_TCP_TCP_tcp_window_size_Report.csv  Experiment_121_ldaps_TCP_TCP_frame_length_Report.csv  Experiment_122_ldap_TCP_TCP_frame_length_Report.csv  Experiment_123_ldap_TCP_TCP_ip_ttl_Report.csv  Experiment_124_ldap_TCP_TCP_tcp_window_size_Report.csv  Experiment_125_m-image-lm_TCP_TCP_frame_length_Report.csv  (+307 more)
benchmark/data/source_data/: ETTh1_HUFL.csv  ETTh1_HULL.csv  ETTh1_MUFL.csv  ETTh1_MULL.csv  ETTh1_OT.csv  ETTh2_HUFL.csv  ETTh2_HULL.csv  ETTh2_LUFL.csv  ETTh2_LULL.csv  ETTh2_MUFL.csv  ETTh2_MULL.csv  ETTh2_OT.csv  ETTm1_HUFL.csv  ETTm1_HULL.csv  ETTm1_LUFL.csv  ETTm1_MUFL.csv  ETTm1_MULL.csv  ETTm1_OT.csv  ETTm2_HUFL.csv  ETTm2_HULL.csv  ETTm2_LUFL.csv  ETTm2_LULL.csv  ETTm2_MUFL.csv  ETTm2_MULL.csv  ETTm2_OT.csv  SID_06AE6B5B_5G_DL_Data_Volume.csv  SID_06AE6B5B_5G_UL_Data_Volume.csv  SID_06AE6B5B_5g_dl_throughput.csv  SID_06AE6B5B_5g_ul_throughput.csv  SID_15D91BD6_5G_DL_Data_Volume.csv  SID_15D91BD6_5G_UL_Data_Volume.csv  SID_15D91BD6_5g_dl_throughput.csv  SID_15D91BD6_5g_ul_throughput.csv  SID_2B1C7DAB_5G_DL_Data_Volume.csv  SID_2B1C7DAB_5G_UL_Data_Volume.csv  SID_2B1C7DAB_5g_dl_throughput.csv  SID_2B1C7DAB_5g_ul_throughput.csv  SID_2D6F82D4_5G_DL_Data_Volume.csv  SID_2D6F82D4_5G_UL_Data_Volume.csv  SID_2D6F82D4_5g_dl_throughput.csv  (+296 more)
docs/: t_arima.md
images/benchmark/: metrics.csv
src/arima/: f_arima.py  s_arima.py  t_arima.py
src/lstm/: lstm.py
