[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "driftmind"
version = "0.2.0"
description = "Python client and demo utilities for DriftMind forecasting API"
authors = [
    { name = "Thingbook.io", email = "roman.f@thingbook.io" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["dimensionality-reduction", "machine-learning", "scikit-learn"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.32.4",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "python-dotenv>=1.0.1",
    "python-dateutil>=2.9.0.post0",
    "pydantic>=2.10.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "ruff>=0.4.0",
]
[project.urls]
Repository = "https://github.com/thngbk/driftmind"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
markers = [
    "integration: marks tests as integration tests (run against real API)",
]
