[project]
name = "driftmind-benchmark"
version = "0.2.0"
description = "Benchmarking suite for comparing time-series forecasting models against the DriftMind forecasting API"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.4",
    "statsmodels>=0.14.0",
    "pandas>=2.0.3",
    "matplotlib>=3.7.5",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.0.0",
]
lstm = [
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "nbstripout>=0.8.2",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
markers = [
    "integration: marks tests as integration tests (run against real API)",
]

[dependency-groups]
dev = [
    "nbstripout>=0.8.2",
]
